# ChangeLog for dev-ruby/asciidoctor
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/ChangeLog,v 1.1 2013/12/13 04:10:45 mrueg Exp $

*asciidoctor-0.1.4 (13 Dec 2013)

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +asciidoctor-0.1.4.ebuild,
  +metadata.xml:
  Import from dev-zero's overlay. Added small changes.