@@ -1,4 +1,4 @@
 DIST asciidoctor-0.1.4.tar.gz 225956 SHA256 ed80cf059dcef9e91465c80500bd56f0a8176475ab2dfdb1ca438b1791135b64 SHA512 2e463741c0da8adcb8a1af65a44f5a91cb04e4b3290b7463c592c7cd7070b5f49cbed0e97a763ec09acf5691ea0a5fb338f999f63ad09b5edf038c570793834c WHIRLPOOL 35cd7e3f3a8b57177d47f10d3fc8a303a75055363c643fdda21fb70d62c0def6fcbce443a7db37cde10aa0de3a97c2b05b70ae48e7fe4be90085d5bac3a39a77
-EBUILD asciidoctor-0.1.4.ebuild 801 SHA256 8663ea0f57b4a2574f858109004e056e86526f813ef3c160222df2e9abb0bdb5 SHA512 813a660a6c0ff1109b22f90bf516ffbe8847478aada000a50d816519ff313d21802f9850c0e5da638a18c31298ccc5d4805cd44dcbabdf78665af34481db7cda WHIRLPOOL 133f1d8f240d4b2f061b3d49b867c2688766940af250bc46eda8af1dd353f7b3c700697287ec54f095c9a12d418b8bf9ebdf1ccb884c42a065301a4a9fb0e46e
-MISC ChangeLog 393 SHA256 c371777ccdd662c3077a00e47faa1cb4e88b8799bf6f95f5899818e18949d1be SHA512 121f66fcf93634cd8761f86f72259639068d7929bb5358c485ea90b6902011bb0122467720e6da17769348d74ccd5a73720916747989df9d37518432fe89e1ab WHIRLPOOL f7041f7b93d120cf28724b99f9412b4bd13db351510c00429e71a042d798c33a534b0390df7404643f581a436d87cedc947d176a215ac0f113e66982024d35c9
+EBUILD asciidoctor-0.1.4.ebuild 808 SHA256 435ef95dcefcf199fe698d247d4c0ee2adc2e04b901b073a98105e2cac5d011e SHA512 636f11f7236a1705d625c1c82624845fed20830fee7ca79fc395bdbdb04b5dba0068fa28cb5c1ad5a06a771dd0822ec1673591f3a228baf581b8ff9621ba4a02 WHIRLPOOL af8afc8816d59a356f3b1333b0e5925f6d37bf0845273bac12001e93093b3a8d082f177fa193de15eaed0b372bbbe5fda246a149176bf9c5e068b941cd46a749
+MISC ChangeLog 489 SHA256 e3a1995875b10472eee798ea3d439861a873ad2a13e2145bebf878bef7a60dbb SHA512 43af6fc97c9f3e2ba23a1016c4de11fb93d976aac983d5d3e88e1b59ff5c13fa8d643c11deebe596b2dc5f07c7b0273fb1742eb48b41c14a2ba5bafc3f447510 WHIRLPOOL 0b31b66c2273d0ec197fab05fa8d459107c51ad6b47a1a54e276f340dbdfac4e62696a2bcde45a445058212e5901d4f9133bc55a343fbae75f7fcc075c4b36f5
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
