@@ -1,9 +1,9 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/asciidoctor-0.1.4.ebuild,v 1.1 2013/12/13 04:10:45 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/asciidoctor-0.1.4.ebuild,v 1.2 2014/07/26 19:38:33 mrueg Exp $
 
 EAPI=5
-USE_RUBY="ruby19"
+USE_RUBY="ruby19 ruby20"
 
 RUBY_FAKEGEM_RECIPE_TEST="rake"
 RUBY_FAKEGEM_RECIPE_DOC="rdoc"
