@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/asciidoctor
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/ChangeLog,v 1.1 2013/12/13 04:10:45 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/asciidoctor/ChangeLog,v 1.2 2014/07/26 19:38:33 mrueg Exp $
+
+  26 Jul 2014; Manuel Rüger <mrueg@gentoo.org> asciidoctor-0.1.4.ebuild:
+  Add ruby20 target.
 
 *asciidoctor-0.1.4 (13 Dec 2013)
 
